# nandtotetris

./: README.md
projects/01/: And16.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
projects/02/: ALU.hdl  FullAdder.hdl  Inc16.hdl  IsNeg16.hdl  Or16Way.hdl
projects/03/a/: Bit.hdl  DMux8Way16.hdl  Or3Way.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
projects/03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
projects/04/fill/: Fill.asm  Fill.hack
projects/04/mult/: Mult.asm  Mult.hack
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/06/Assembler/: code.py  data.py  main.py  myparser.py  pyproject.toml  symbols.py
projects/06/max/: MaxL.asm
projects/07/VMTranslater/: codewriter.py  commands.py  main.py  myparser.py
projects/08/VMTranslater/: codewriter.py  main.py  myparser.py  pyproject.toml
projects/09/Frog/: Frog.jack  Frog.vm  FrogGame.jack  FrogGame.vm  Jump.jack  Jump.vm  Main.jack  Main.vm
projects/09/Pong/: Ball.jack
projects/09/Test/: Frog.jack  Frog.vm  Main.jack  Main.vm
projects/10/: Compare.sh
projects/10/Compiler/: CompilationEngine.py  JackAnalyzer.py  Tokenizer.py  Tokens.py  pyproject.toml
projects/11/: .compile_all.sh.swp  compile_all.sh
projects/11/Average/: Main.vm
projects/11/Compiler/: CompilationEngine.py  JackAnalyzer.py  SymbolTable.py  Tokenizer.py  VMWriter.py  compile_all.sh  pyproject.toml
projects/11/ComplexArrays/: Main.vm
projects/11/ConvertToBin/: Main.vm
projects/12/: Math.jack  Math.vm  Memory.jack  OldMemory.jack  Output.jack
(+52 files in other folders)
